--- a/index.html
+++ b/index.html
@@ -36,13 +36,19 @@
         <div class="sec w3-container w3-teal">
             <h2>Parallax Scrolling Website</h2>
             <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab, architecto. Ducimus debitis exercitationem amet repellat rem iusto qui, labore repudiandae. Quis aliquam recusandae sint sequi a quos nemo, eligendi nobis.<br> Lorem ipsum dolor,
-                sit amet consectetur adipisicing elit. Ab, architecto. Ducimus debitis exercitationem amet repellat rem iusto qui, labore repudiandae. Quis aliquam recusandae sint sequi a quos nemo, eligendi nobis.<br> Lorem ipsum dolor, sit amet consectetur
-                adipisicing elit. Ab, architecto. Ducimus debitis exercitationem amet repellat rem iusto qui, labore repudiandae. Quis aliquam recusandae sint sequi a quos nemo, eligendi nobis.<br> Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Ab, architecto. Ducimus debitis exercitationem amet repellat rem iusto qui, labore repudiandae. Quis aliquam recusandae sint sequi a quos nemo, eligendi nobis.<br> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab, architecto.
-                Ducimus debitis exercitationem amet repellat rem iusto qui, labore repudiandae. Quis aliquam recusandae sint sequi a quos nemo, eligendi nobis.<br> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab, architecto. Ducimus debitis
-                exercitationem amet repellat rem iusto qui, labore repudiandae. Quis aliquam recusandae sint sequi a quos nemo, eligendi nobis.<br> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab, architecto. Ducimus debitis exercitationem
-                amet repellat rem iusto qui, labore repudiandae. Quis aliquam recusandae sint sequi a quos nemo, eligendi nobis.<br>
+                “Try not. Do or do not. There is no try.” —Yoda, Star Wars Episode V: The Empire Strikes Back<br>
+                “Your eyes can deceive you; don’t trust them.” —Obi-Wan Kenobi, Star Wars Episode IV: A New Hope<br>
+                “Luminous beings we are, not this crude matter.” —Yoda, The Empire Strikes Back<br>
+                “Who’s the more foolish: the fool or the fool who follows him? —Obi-Wan Kenobi, A New Hope<br>
+                “Your focus determines your reality.” —Qui-Gon Jinn, Star Wars Episode I: The Phantom Menace<br>
+                “No longer certain that one ever does win a war, I am.” —Yoda, The Clone Wars<br>
+                “In a dark place we find ourselves and a little more knowledge lights our way.” —Yoda, Star Wars Episode III: Revenge Of The Sith<br>
+                “Sometimes we must let go of our pride and do what is requested of us.” —Anakin Skywalker, Star Wars Episode II: Attack Of The Clones<br>
+                “We’ll always be with you. No one’s ever really gone. A thousand generations live in you now.” —Luke Skywalker, Star Wars Episode IX: The Rise of Skywalker<br>
+                “The ability to speak does not make you intelligent.” —Qui-Gon Jinn, The Phantom Menace<br>
+                “Difficult to see; always in motion is the future.” —Yoda, The Empire Strikes Back<br>
+                “Many of the truths that we cling to depend on our viewpoint.” — Obi-Wan Kenobi, Star Wars Episode VI: Return Of The Jedi<br>
+                “Train yourself to let go of everything you fear to lose.” —Yoda, Revenge Of The Sith
             </p>
         </div>
     </main>
